web-infras/parser/tests/fixtures/babel/core/scope/dupl-bind-2nd-lvl-var/output.txt
[SyntaxError]: Identifier has already been declared. (3,5)
3|var foo = 1;
 |   ^
